# libNiPass

./: .gitignore  CMakeLists.txt  README.md
docs/: passes.md
include/: CryptoUtils.h  ObfuscationOptions.h  PassRegistry.h  SubstituteImpl.h  Utils.h
include/EncPass/: EnVMFlatten.h  EncryptUtils.h  EnhancedIndirectBranch.h  EnhancedIndirectCall.h  EnhancedIndirectGlobalVariable.h  EnhancedStringEncryption.h  FlatteningEnhanced.h
include/compat/: CallSite.h
src/: CMakeLists.txt  CryptoUtils.cpp  FrontendPluginBridge.cpp  PassRegistry.cpp  Utils.cpp
src/EncPass/: EnVMFlatten.cpp  EnhancedIndirectBranch.cpp  EnhancedIndirectCall.cpp  EnhancedIndirectGlobalVariable.cpp  EnhancedStringEncryption.cpp  FlatteningEnhanced.cpp
src/Fun/: SubstituteImpl.cpp
src/Indirect/: ObfuscationOptions.cpp
testarm64/: .gitignore  CMakeLists.txt  build.sh  remote_debug.sh  run_test.sh  test.c  test_annotate.c  test_production.c  test_stl.cpp  test_template.cpp
